# FluidSim

./: .gitignore  CMakeLists.txt  README.md
cmake/: FindGLFW3.cmake
src/: CMakeLists.txt  main.cpp
src/benchmark/: benchmark.cpp  benchmark.hpp
src/init/: initGL.cpp  initGL.hpp
src/renderer/: renderer.cpp  renderer.h  renderer.hpp
src/shaders/: circle.fs.glsl  circle.vs.glsl
src/sim/: Simulation.cpp  Simulation.hpp  kernel.cpp  kernel.hpp  particle.hpp  simConfig.hpp  sphSolver.cpp  sphSolver.hpp
